[gd_scene load_steps=3 format=2]

[ext_resource path="res://icons/crop.png" type="Texture" id=1]
[ext_resource path="res://ui/FileImporter.gd" type="Script" id=2]

[node name="FileImporter" type="PanelContainer"]
margin_top = 646.0
margin_right = 381.0
margin_bottom = 748.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 374.0
margin_bottom = 110.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 357.0
margin_bottom = 93.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 347.0
margin_bottom = 20.0

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 154.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Load"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0, 1, 1, 0 )
margin_left = 158.0
margin_right = 188.0
margin_bottom = 20.0
custom_constants/separation = 30

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 347.0
margin_bottom = 20.0
size_flags_horizontal = 11
text = "Save"

[node name="CropContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 347.0
margin_bottom = 83.0

[node name="FileLabel" type="Label" parent="MarginContainer/VBoxContainer/CropContainer"]
margin_right = 347.0
margin_bottom = 14.0
text = "No File Loaded"
align = 2
clip_text = true

[node name="FileStatsLabel" type="Label" parent="MarginContainer/VBoxContainer/CropContainer"]
margin_top = 18.0
margin_right = 347.0
margin_bottom = 32.0
align = 1
clip_text = true

[node name="Crop" type="Button" parent="MarginContainer/VBoxContainer/CropContainer"]
margin_top = 36.0
margin_right = 347.0
margin_bottom = 59.0
size_flags_horizontal = 3
text = "Crop"
icon = ExtResource( 1 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
